<resources>
    <!--Main-->
    <string name="app_name">Elle\'Zina</string>

    <!--Connection-->
    <string name="connectionTitle">Connection</string>
    <string name="connectionUserName">Username</string>
    <string name="connectionPassword">Password</string>
    <string name="connectionButtonLogin">Log in</string>
    <string name="connectionNotRegistered">Not registered?</string>
    <string name="connectionSignIn">Sign in</string>

    <!--Register-->
    <string name="registerTitle">Account information</string>
    <string name="registerUsername">Username*</string>
    <string name="registerPassword">Password*</string>
    <string name="registerPasswordConfirmation">Password Confirmation*</string>
    <string name="registerEmail">E-mail address*</string>
    <string name="registerFName">First name*</string>
    <string name="registerLName">Last name*</string>
    <string name="registerAddress">Address*</string>
    <string name="registerPhone">Phone number</string>
    <string name="registerPhonePrefix">+32 </string>
    <string name="registerCreateAccount">Create account</string>
    <string name="registrationSuccesfull">Account successfully created</string>

    <!--Partners-->
    <string name="partnerTitle">Stores</string>

    <!--Navigation Bar-->
    <string name="navHome">Home</string>
    <string name="navShopping">Browse</string>
    <string name="navFavorites">Favorites</string>
    <string name="navCard">Card</string>
    <string name="navProfile">Profile</string>

    <!--Browse-->
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <!--Card-->
    <string name="nbArticles">Number of articles :</string>
    <string name="totalPrice">Total price of the articles :</string>
    <string name="orderNow">Order now</string>
    <string name="dressAvailable">Available</string>
    <string name="dressNotAvailable">Not available</string>

    <!--Article-->
    <string name="articleAddCard">Add to shopping list</string>
    <string name="articleAvailabilityTitle">Availability</string>
    <string name="articleSizeTitle">Size</string>

    <!--Profile-->
    <string name="loyaltyPoints">Loyalty points :</string>
    <string name="profileLogout">Log out</string>
    <string name="loyaltySystemDescription">Every 100 loyalty points collected give you access to one 10% off coupon usable on any dress available in the store. Only one coupon can be used at a time.</string>

    <!--Logout dialog-->
    <string name="logoutDialogTitle">LOG OUT</string>
    <string name="logoutDialogMessage">Would you like to log out?</string>
    <string name="logoutDialogPositive">Yes</string>
    <string name="logoutDialogNegative">No</string>

    <!--Errors-->
    <string name="emptyFieldError">Field cannot be empty</string>
    <string name="passwordInvalidFormat">Password format is incorrect</string>
    <string name="passwordMismatchError">Passwords do not match each other</string>
    <string name="usernameMinLengthError">Minimum length is 4 characters</string>
    <string name="emailInvalidFormatError">Please enter a valid e-mail</string>
    <string name="networkConnectionError">Connection error, please check your connection and try again.</string>
</resources>
