<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ConnectionActivity">

    <ImageView
        android:id="@+id/connectionLogoId"
        android:layout_width="225dp"
        android:layout_height="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/connectionPasswordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="@string/connectionPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/connectionUsernameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:hint="@string/connectionUserName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connectionLoginId"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginTop="496dp"
        android:text="@string/connectionButtonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionNotRegisteredId"
        android:layout_width="142dp"
        android:layout_height="31dp"
        android:layout_marginTop="408dp"
        android:text="@string/connectionNotRegistered"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionSignInId"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="444dp"
        android:text="@string/connectionSignIn"
        android:textColor="@color/colorAccent"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionTitleId"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginTop="179dp"
        android:text="@string/connectionTitle"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>