<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/articleAvailabilityId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.69"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.991" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="63dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="507dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/articlePriceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.924" />

        <Button
            android:id="@+id/articleButtonAddToCardId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/articleAddCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="354dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/articlePictureId"
                        android:layout_width="match_parent"
                        android:layout_height="244dp"
                        android:layout_gravity="center"
                        app:srcCompat="@android:drawable/ic_menu_report_image" />

                    <TextView
                        android:id="@+id/articleNameId"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/articleDescriptionId"
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/articleDateAvailabilityTitleId"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/articleAvailabilityTitle"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/articleDateBeginId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/articleDateEndId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/articleSizeTitleId"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/articleSizeTitle"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/articleSizeId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <ToggleButton
            android:id="@+id/articleDressButtonFavoriteId"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/favorite_toggle_selector"
            android:checked="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>